crates/sandbox-local/tests/snapshots/describe_changes__git_describe_with_repo_user.snap
---
source: crates/sandbox-local/tests/describe_changes.rs
expression: git_describe_and_read_log(repo).await
---
commit [COMMIT_ID]
Author:     Test User <test@example.com>
AuthorDate: [TIMESTAMP]
Commit:     Test User <test@example.com>
CommitDate: [TIMESTAMP]

    feat: add widget support
    
    Added the new widget module.
    
    Co-authored-by: Infinity 🤖 <infinity@hydro.run>
