crates/sandbox-local/tests/snapshots/describe_changes__jj_describe_without_user.snap
---
source: crates/sandbox-local/tests/describe_changes.rs
expression: describe_and_read_log(repo).await
---
Commit ID: [COMMIT_ID]
Change ID: [CHANGE_ID]
Bookmarks: sandbox-test-thread sandbox-test-thread@git
Author   : Infinity 🤖 <infinity@hydro.run> ([TIMESTAMP])
Committer: Infinity 🤖 <infinity@hydro.run> ([TIMESTAMP])

    feat: add widget support

    Added the new widget module.

    Co-authored-by: Infinity 🤖 <infinity@hydro.run>
